--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-app-ts",
+  "name": "react-app-tsx",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,14 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.2.7",
-    "axios": "^1.7.3",
+    "@reduxjs/toolkit": "^2.2.6",
+    "axios": "^1.7.2",
+    "nodemon": "^3.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
-    "react-idle-timer": "^5.7.2",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.26.0",
+    "react-router-dom": "^6.24.1",
     "redux": "^5.0.1"
   },
   "devDependencies": {
